minor refactor of some interpretability code

--- a/guided_backprop.ipynb
+++ b/guided_backprop.ipynb
@@ -73,35 +73,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_sample_image(batch_idx, sample_idx):\n",
-    "\n",
-    "    with open('params.json', 'r') as param_reader:\n",
-    "            config = json.load(param_reader)\n",
-    "\n",
-    "    model_params, training_params= config['model_params'], config['training_params']\n",
-    "\n",
-    "    dataset = FacesDataset(config['data_path'], mode=\"conditional\")\n",
-    "    dataloader = DataLoader(dataset, batch_size = model_params['batch_size'], shuffle=False)\n",
-    "\n",
-    "\n",
-    "    for batch_num, img_label_pair in enumerate(dataloader):\n",
-    "\n",
-    "        young_images, old_images = img_label_pair\n",
-    "        \n",
-    "        if batch_num == batch_idx:\n",
-    "            sample_young = young_images[sample_idx]\n",
-    "            return sample_young\n",
-    "        else:\n",
-    "            pass\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -128,7 +99,24 @@
     "model.eval()\n",
     "sample_young = generate_sample_image(0, 3)\n",
     "plt.imshow(sample_young.permute(1, 2, 0))\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "sample_young = sample_young[np.newaxis,:]\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    device = torch.device(\"cuda\")\n",
+    "else:\n",
+    "    print(\"GPU unavailable, using CPU instead\")\n",
+    "    device = torch.device(\"cpu\")\n",
+    "\n",
+    "output = model(device, sample_young)\n",
+    "output = output.detach().cpu().numpy()\n",
+    "output = np.squeeze(output) \n",
+    "output = np.transpose(output, (1, 2, 0))\n",
+    "\n",
+    "plt.imshow(output)\n",
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
