--- a/guided_backprop.ipynb
+++ b/guided_backprop.ipynb
@@ -4,19 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'GDP'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdisplay_functions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mGDP\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GuidedBackpropModel\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'GDP'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -165,16 +153,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 3, 64, 64)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "forward() missing 1 required positional argument: 'input'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(gbp_output\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m      4\u001b[0m guided_backprop \u001b[38;5;241m=\u001b[39m GuidedBackpropModel(model)\n\u001b[0;32m----> 5\u001b[0m guided_gradients \u001b[38;5;241m=\u001b[39m \u001b[43mguided_backprop\u001b[49m\u001b[43m(\u001b[49m\u001b[43msample_young\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Desktop/UCSD/Winter 2024/CSE_251B/Final_Project/AgingGAN/GBP.py:63\u001b[0m, in \u001b[0;36mGuidedBackpropModel.__call__\u001b[0;34m(self, input, index)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m---> 63\u001b[0m     output \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmodel\u001b[39m.\u001b[39;49mforward(\u001b[39minput\u001b[39;49m)\n\u001b[1;32m     65\u001b[0m     \u001b[39mif\u001b[39;00m index \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     66\u001b[0m         index \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39margmax(output)\n",
+      "\u001b[0;31mTypeError\u001b[0m: forward() missing 1 required positional argument: 'input'"
+     ]
+    }
+   ],
+   "source": [
+    "### GUIDED BACKPROP\n",
+    "gbp_output = output[np.newaxis,:].transpose(0,3,1,2)\n",
+    "print(gbp_output.shape)\n",
+    "guided_backprop = GuidedBackpropModel(model)\n",
+    "guided_gradients = guided_backprop(gbp_output)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "### GUIDED BACKPROP\n",
-    "\n",
-    "from GDP import GuidedBackpropModel  \n",
-    "\n",
-    "\n"
+    "gbp_output = output[np.newaxis,:].transpose(0,3,1,2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 3, 64, 64)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gbp_output.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
