--- a/guided_backprop.ipynb
+++ b/guided_backprop.ipynb
@@ -153,14 +153,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1, 3, 64, 64)\n"
+      "input in __call__:  torch.Size([1, 3, 64, 64])\n",
+      "input in forward:  torch.Size([1, 3, 64, 64])\n"
      ]
     },
     {
@@ -170,18 +171,18 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(gbp_output\u001b[38;5;241m.\u001b[39mshape)\n\u001b[1;32m      4\u001b[0m guided_backprop \u001b[38;5;241m=\u001b[39m GuidedBackpropModel(model)\n\u001b[0;32m----> 5\u001b[0m guided_gradients \u001b[38;5;241m=\u001b[39m \u001b[43mguided_backprop\u001b[49m\u001b[43m(\u001b[49m\u001b[43msample_young\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/UCSD/Winter 2024/CSE_251B/Final_Project/AgingGAN/GBP.py:63\u001b[0m, in \u001b[0;36mGuidedBackpropModel.__call__\u001b[0;34m(self, input, index)\u001b[0m\n\u001b[1;32m     62\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[0;32m---> 63\u001b[0m     output \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmodel\u001b[39m.\u001b[39;49mforward(\u001b[39minput\u001b[39;49m)\n\u001b[1;32m     65\u001b[0m     \u001b[39mif\u001b[39;00m index \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     66\u001b[0m         index \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39margmax(output)\n",
+      "Cell \u001b[0;32mIn[4], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m### GUIDED BACKPROP\u001b[39;00m\n\u001b[1;32m      2\u001b[0m guided_backprop \u001b[38;5;241m=\u001b[39m GuidedBackpropModel(model)\n\u001b[0;32m----> 3\u001b[0m guided_gradients \u001b[38;5;241m=\u001b[39m \u001b[43mguided_backprop\u001b[49m\u001b[43m(\u001b[49m\u001b[43msample_young\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/Desktop/UCSD/Winter 2024/CSE_251B/Final_Project/AgingGAN/GBP.py:65\u001b[0m, in \u001b[0;36mGuidedBackpropModel.__call__\u001b[0;34m(self, input, index)\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__call__\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m, index\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m     64\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39minput in __call__: \u001b[39m\u001b[39m'\u001b[39m, \u001b[39minput\u001b[39m\u001b[39m.\u001b[39mshape)\n\u001b[0;32m---> 65\u001b[0m     output \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mforward(\u001b[39minput\u001b[39;49m)\n\u001b[1;32m     67\u001b[0m     \u001b[39mif\u001b[39;00m index \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m     68\u001b[0m         index \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39margmax(output)\n",
+      "File \u001b[0;32m~/Desktop/UCSD/Winter 2024/CSE_251B/Final_Project/AgingGAN/GBP.py:61\u001b[0m, in \u001b[0;36mGuidedBackpropModel.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m):\n\u001b[1;32m     60\u001b[0m     \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39minput in forward: \u001b[39m\u001b[39m'\u001b[39m, \u001b[39minput\u001b[39m\u001b[39m.\u001b[39mshape)\n\u001b[0;32m---> 61\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mmodel(\u001b[39minput\u001b[39;49m)\n",
+      "File \u001b[0;32m~/opt/anaconda3/envs/OBEG/lib/python3.9/site-packages/torch/nn/modules/module.py:1102\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1098\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1099\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1100\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1101\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1102\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1103\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1104\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
       "\u001b[0;31mTypeError\u001b[0m: forward() missing 1 required positional argument: 'input'"
      ]
     }
    ],
    "source": [
     "### GUIDED BACKPROP\n",
-    "gbp_output = output[np.newaxis,:].transpose(0,3,1,2)\n",
-    "print(gbp_output.shape)\n",
     "guided_backprop = GuidedBackpropModel(model)\n",
-    "guided_gradients = guided_backprop(gbp_output)\n",
+    "guided_gradients = guided_backprop(device, sample_young)\n",
     "\n"
    ]
   },
@@ -212,6 +213,26 @@
    ],
    "source": [
     "gbp_output.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 3, 64, 64])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_young.shape"
    ]
   },
   {
